코드리뷰 반영_25-26-Backend-Assignment-03_허우찬